--- a/notebooks/Problem-Transportowy-1.ipynb
+++ b/notebooks/Problem-Transportowy-1.ipynb
@@ -166,14 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "PWTg-VkImaBR",
     "pycharm": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dane:\n",
+      "Demand: {'Lon': 125, 'Ber': 175, 'Maa': 225, 'Ams': 250, 'Utr': 225, 'Hag': 200}\n",
+      "Supply: {'Arn': 600, 'Gou': 650}\n",
+      "T: {('Lon', 'Arn'): 1000, ('Lon', 'Gou'): 2.5, ('Ber', 'Arn'): 2.5, ('Ber', 'Gou'): 1000, ('Maa', 'Arn'): 1.6, ('Maa', 'Gou'): 2.0, ('Ams', 'Arn'): 1.4, ('Ams', 'Gou'): 1.0, ('Utr', 'Arn'): 0.8, ('Utr', 'Gou'): 1.0, ('Hag', 'Arn'): 1.4, ('Hag', 'Gou'): 0.8}\n"
+     ]
+    }
+   ],
    "source": [
     "Demand = {\n",
     "   'Lon':   125,        # London\n",
@@ -202,7 +213,12 @@
     "    ('Utr','Gou'): 1.0,\n",
     "    ('Hag','Arn'): 1.4,\n",
     "    ('Hag','Gou'): 0.8\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(\"Dane:\")\n",
+    "print(\"Demand:\", Demand)\n",
+    "print(\"Supply:\", Supply)\n",
+    "print(\"T:\", T)"
    ]
   },
   {
